<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open_first_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_first_door" />

        <Button
            android:id="@+id/close_first_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/close_first_door" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open_second_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_second_door" />

        <Button
            android:id="@+id/close_second_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/close_second_door" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open_all_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_all_door" />

        <Button
            android:id="@+id/close_all_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/close_all_door" />
    </LinearLayout>

    <Button
        android:id="@+id/get_door_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_door_status" />

</LinearLayout>