<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/is_in_location"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/location_reception" />

        <Button
            android:id="@+id/set_location"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:text="@string/location_init_point" />

        <Button
            android:id="@+id/is_location"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_height="48dp"
            android:text="@string/location_is_estimate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_reception_point"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/location_set_reception" />

        <Button
            android:id="@+id/get_location"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_height="48dp"
            android:text="@string/location_get_point" />

        <Button
            android:id="@+id/remove_location"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:text="@string/location_remove_point" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/getname"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:text="@string/getname" />
    </LinearLayout>
</LinearLayout>
