<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charge_desc"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_auto_charge"
            style="@style/TextStyle"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:textSize="8sp"
            android:background="@drawable/button_rounded"
            android:text="@string/charge_auto_start" />

        <Button
            android:id="@+id/stop_auto_charge"
            style="@style/TextStyle"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:textSize="8sp"
            android:background="@drawable/button_rounded"
            android:text="@string/charge_auto_stop" />

        <Button
            android:id="@+id/disable_auto_charge"
            style="@style/TextStyle"
            android:layout_marginLeft="8dp"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:textSize="8sp"
            android:background="@drawable/button_rounded"
            android:text="@string/charge_disable" />

        <Button
            android:id="@+id/charge_leave"
            style="@style/TextStyle"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:textSize="8sp"
            android:background="@drawable/button_rounded"
            android:text="@string/charge_stop_leave" />
    </LinearLayout>
</LinearLayout>
