<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_play_text"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:hint="@string/speech_hint_text" />

        <Button
            android:id="@+id/play_btn"
            style="@style/TextStyle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/speech_play" />

        <Button
            android:id="@+id/stop_btn"
            style="@style/TextStyle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/speech_stop" />

        <Button
            android:id="@+id/query_btn"
            style="@style/TextStyle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/speech_query" />
    </LinearLayout>

</LinearLayout>