<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_lead_point"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/lead_hint_point" />

        <Button
            android:id="@+id/start_lead_btn"
            android:layout_width="68dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/start_lead_text"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/stop_lead_btn"
            android:layout_width="68dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/stop_lead_text"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/lead_tips_text"
        android:layout_height="wrap_content"/>
</LinearLayout>