<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:enabled="false"
            android:text="@string/vision_register" />

        <Button
            android:id="@+id/find_people_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:enabled="false"
            android:text="@string/vision_find" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vision_warning"
        />
</LinearLayout>