<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_navigation_point"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="会议间" />

        <Button
            android:id="@+id/start_navigation"
            style="@style/TextStyle"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:background="#4CAF50"
            android:text="@string/navigation" />

        <Button
            android:id="@+id/stop_navigation"
            style="@style/TextStyle"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:background="#F44336"
            android:text="@string/navigation_stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/turn_direction"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:text="@string/navigation_resume_direction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/check_pass_gate"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:text="目标点位是否经过闸机" />

        <TextView
            android:id="@+id/check_pass_gate_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="正在检查中，请稍后..."
            android:visibility="invisible" />

        <Button
            android:id="@+id/start_pose_name"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:text="闸机入口名字"
            android:visibility="invisible" />

        <Button
            android:id="@+id/end_pose_name"
            style="@style/TextStyle"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="闸机出口名字"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>
